[package]
name = "bork"
version = "0.0.1"
authors = ["wbthomason <wil.thomason@gmail.com>"]
build = "build.rs"

[build-dependencies]
serde_codegen = "~0.8.22"

[dependencies]
curl            = "~0.4.1"
tokio-curl      = "~0.1.8"
tokio-core      = "~0.1.3"
clap            = "~2.19.2"
toml            = "~0.2.1"
term            = "~0.4.4"
log             = "~0.3.6"
log4rs          = "~0.5.2"
serde           = "~0.8.22"
serde_json      = "~0.8.4"
libc            = "~0.2.18"
futures         = "~0.1.8"
itertools       = "~0.5.8"
