[package]
name = "bork"
version = "0.0.1"
authors = ["wbthomason <wil.thomason@gmail.com>"]

[dependencies]
curl            = "~0.4.8"
tokio-curl      = "~0.1.10"
tokio-core      = "~0.1.10"
clap            = "~2.26.2"
config          = "~0.7.0" 
slog            = "~2.0.12"
slog-async      = "~2.1.0"
slog-term       = "~2.2.0"
serde           = "~1.0.15"
serde_derive    = "~1.0.15"
serde_json      = "~1.0.4"
libc            = "~0.2.32"
futures         = "~0.1.16"
itertools       = "~0.7.1"
colored         = "~1.5.3"
chrono          = "~0.4.0"
