[package]
name = "bork"
version = "0.0.1"
authors = ["wbthomason <wil.thomason@gmail.com>"]

[dependencies]
curl            = "~0.4.8"
tokio-curl      = "~0.1.10"
tokio-core      = "~0.1.11"
clap            = "~2.29.0"
config          = "~0.7.0" 
slog            = "~2.1.1"
slog-async      = "~2.2.0"
slog-term       = "~2.3.0"
serde           = "~1.0.27"
serde_derive    = "~1.0.27"
serde_json      = "~1.0.9"
libc            = "~0.2.34"
futures         = "~0.1.17"
itertools       = "~0.7.4"
colored         = "~1.6.0"
chrono          = "~0.4.0"
